kyy-k8s-dev/app/php/ccc-php/ccc-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ccc-php
  name: ccc-php
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: ccc-php
